=== 0.1.3 / 2011-06-07

* Make the deployer pick out branches correctly
* Update website copy
* Remove dependency on Hoe


=== 0.1.2 / 2010-03-09

* Fix bug in custom loader function for `pageTracker`
* Improve how we map branch/tag names to commits to cope correctly with multiple refs
  pointing at the same commit and always picking the latest commit for a branch


=== 0.1.1 / 2009-11-09

* Don't place style.css etc in the local app directory, serve them from the gem
* Allow a `location` field in `deploy.yml` that changes the paths rendered in `helium.js`


=== 0.1.0 / 2009-11-02

* First public release under the GPL v2
* Includes Deployer, a web UI, and `install`, `create` and `serve` command line tools