@@ -1,5 +1,6 @@
 === 0.1.3 / 2011-06-07
 
+* Only build projects whose Jake build files are in their root
 * Make the deployer pick out branches correctly
 * Update website copy
 * Remove dependency on Hoe
